# embedding-models-benchmark

./: README.md  pyproject.toml
data/embeddings/cohere/embed-v4.0/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/google/gemini-embedding-001-d3072/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/google/gemini-embedding-001-d768/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/google/text-embedding-005-d768/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/openai/text-embedding-3-large-d3072/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/qwen/text-embedding-v4/: corpus_runs.jsonl  queries_runs.jsonl
data/embeddings/qwen/text-embedding-v4-d2048/: corpus_runs.jsonl  queries_runs.jsonl
data/eval/cohere/embed-v4.0/: metrics.json  top100.parquet
data/eval/google/gemini-embedding-001-d3072/: metrics.json  top100.parquet
data/eval/google/gemini-embedding-001-d768/: metrics.json  top100.parquet
data/eval/google/text-embedding-005-d768/: metrics.json  top100.parquet
data/eval/openai/text-embedding-3-large-d3072/: metrics.json  top100.parquet
data/eval/qwen/text-embedding-v4-d2048/: metrics.json  top100.parquet
data/hard_neg/: summary.json
data/plots/: quantization_table.json
results/: catastrophic_rank_stats.json
scripts/: catastrophic_rank_analysis.py  cost_estimate.py  download_scifact.py  embed.py  evaluate.py  hard_negatives.py  plot_cost_vs_quality.py  plot_hardneg_jaccard.py  plot_neg_margin.py  plot_quantization.py  plot_quantization_table.py  quantize.py  test_keys.py
src/benchmark/: pricing.py
(+9 files in other folders)
